--- a/home.html
+++ b/home.html
@@ -14,17 +14,16 @@
         <div class="mockup-phone">
             <div class="camera"></div>
             <div class="display">
-              <div class="artboard artboard-demo phone-3"><div class="stats shadow">
+              <di class="artboard artboard-demo phone-3">
                 <div class="flex justify-between items-center gap-10">
-                  <div class="stat">
-                    <div class="stat-title text-3xl">Total Balance</div>
+                  <div class="bg-white px-6 rounded-lg">
+                    <div class="stat-title text-3xl">Amount</div>
                     <div id="main-balance" class="stat-value">400</div>
+                  </div>
+                <div class="">
+                  <button class="btn btn-primary px-6"><i class="fa-solid fa-right-from-bracket"></i> Logout</button>
                 </div>
               </div>
-              <div class="flex items-center">
-                <button class="btn btn-primary"><i class="fa-solid fa-right-from-bracket"></i> Log out</button>
-              </div>
-                </div>
             <div class="divider"></div>
             <div class="text-center">
               <h1 class="text-2xl font-bold">🔥 Welcome to Payooo!</h1>
@@ -135,9 +134,9 @@
               </div>
               <div id="Transaction-form" class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                <h3 class="text-center font-bold">Transaction History</h3>
-               <ul>
+               <div id="Transaction-forms" class="text-center px-3 py-2">
 
-               </ul>
+               </div>
               </div>
             </div>
             </div>
@@ -146,10 +145,11 @@
     </main>
     <script src="./utilities.js"></script>
     <script src="./toggle.js"></script>
-    <script src="./payooo.js"></script>
+    <script src="./addmoney.js"></script>
     <script src="./cash.js"></script>
     <script src="./transfer.js"></script>
     <script src="./pay.js"></script>
+    <script src="./bonus.js"></script>
 
 </body>
 </html>
